Small styling issues

--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -29,7 +29,8 @@
   #grid-find {
     padding-top:.4rem;
     padding-bottom:0.1rem;
-    margin-right:1px;
+    margin-right:.25rem;
+    border-color:$body-bg;
   }
 
   
