--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -52,9 +52,10 @@
 @import "../../../node_modules/bootstrap/scss/utilities";
 
 
-
-
 /* FLEXYADMIN */
+
+$brand-warning-light : lighten($brand-warning,40%);
+
 
 @import "_defaults";
 @import "_layout";
