Link checker - almost ready

--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -26,6 +26,11 @@
   
   
   // HEADERS
+  .grid-actions {
+    .grid-action {
+      margin:0 1rem;
+    }
+  }
   #grid-find {
     padding-top:.4rem;
     padding-bottom:0.1rem;
