--- a/sys/flexyadmin/assets/scss/_layout.scss
+++ b/sys/flexyadmin/assets/scss/_layout.scss
@@ -61,6 +61,13 @@
   .message-button {float:right;}
 }
 
+/* MODAL */
+#flexyadmin-modal {
+  .modal-dialog {
+    margin-top:5rem;
+  }
+}
+
 
 /* CONTENT */
 #row {
