Update standard frontend

--- a/public/assets/less-default/text.less
+++ b/public/assets/less-default/text.less
@@ -81,6 +81,7 @@ code {color:@text_special;background-color:@body;padding:.25rem;border-radius:(@
 
 
 /* MENU */
+.navbar ul {margin:0}
 .navbar ul ul {display:none;}
 .navbar li {list-style:none;margin:0px;padding:0px;}
 .navbar a, .navbar .fa-bars {color:@menu_text;background-color:@menu_back;text-transform:uppercase;padding:0.2rem 0.5rem;white-space:nowrap;display:block;}
