Styling & Inhoud van Help

--- a/sys/flexyadmin/views/help/02__Instellingen.html
+++ b/sys/flexyadmin/views/help/02__Instellingen.html
@@ -1,5 +1,6 @@
-Instellingen
-----
+Bovenaan vind je een knop 'Instellingen':
+
+<img src="sys/flexyadmin/assets/img/help/instellingen.png" />
 
 Hier vind je instellingen voor de hele site, onder andere:
 
@@ -10,13 +11,6 @@ Hier vind je instellingen voor de hele site, onder andere:
 De bouwer van je site kan hier nog meer velden aan toevoegen als dat nodig is voor je site.
 
 Hieronder volgt per veld een uitleg.
-
-1. Klik op **Instellingen**
-2. Je ziet nu onderstaand scherm
-3. Vul bij elk veld de instellingen van je site in
-
-<img src="sys/flexyadmin/assets/img/help/site.gif" />
-
 
 [tbl_site.str_title]
 [tbl_site.str_author]
