--- a/sys/flexyadmin/views/help/06__Afbeeldingen.html
+++ b/sys/flexyadmin/views/help/06__Afbeeldingen.html
@@ -1,4 +1,36 @@
-##Foto's plaatsen
+Afbeeldingen uploaden
+=====================
+
+<img src="sys/flexyadmin/assets/img/help/foto_uploaden.gif" />
+
+1. Ga naar **Foto's**
+2. Je ziet nu de lijst met afbeeldingen die al zijn geüpload.
+3. Klik linksboven op het icoontje met het plusje
+4. Er komt nu een pop-up.
+
+<img src="sys/flexyadmin/assets/img/help/multi_upload.gif" />
+
+1. Klik op de knop **Voeg bestanden toe** en kies de afbeeldingen die je wilt uploaden, of sleep de afbeeldingen van je computer naar het pop-upvenster op de plek **Sleep bestanden hierheen**
+2. Herhaal stap 1 als je nog meer afbeeldingen wilt uploaden
+3. Klik op **Start Upload**
+4. Als je nog meer afbeeldingen wilt uploaden: begin weer bij stap 1
+5. Sluit het venster door op het kruisje rechtsboven te klikken
+
+Afbeeldingen verwijderen
+========================
+
+1. Klik het rode kruisje aan bij de afbeelding die je wilt verwijderen
+2. Er komt nu een bevestigingsvenster
+
+Als je meerdere afbeeldingen tegelijk wilt verwijderen:
+
+1. Vink bij elke afbeelding die je wilt verwijderen het lege vakje aan bij die afbeelding
+2. Klik op het rode kruisje bovenin de lijst
+3. Er komt nu een bevestigingsvenster
+
+
+Afbeelding plaatsen
+===================
 
 De manier waarop je foto’s op een pagina kunt plaatsen hangt van de keuzes af die je gemaakt hebt met je webbouwer. De verschillende manieren zijn:
 
