--- a/sys/flexyadmin/views/help/01__Over_Help.html
+++ b/sys/flexyadmin/views/help/01__Over_Help.html
@@ -5,27 +5,8 @@ Je vindt hierin antwoord op vragen als:
 - Hoe kan ik filmpjes plaatsen?
 
 Deze handleiding is van toepassing op een gewone standaardsite.
-Maar ook als je een complexere site hebt, geeft de handleiding de nodige basisinformatie om uit de voeten te kunnen.
+Maar ook als je een complexere site hebt, geeft de handleiding deze nodige basisinformatie om uit de voeten te kunnen.
 
 Mocht je er desondanks toch niet uitkomen, neem dan gerust contact op met de bouwer van je website.
 
 NB Deze handleiding is nog niet up to date met de nieuwste versie!
-
-<!-- Pop-up help
--------
-TODO:
-Uitleg verschijnt binnen FlexyAdmin hier en daar ook in een pop-upvenstertje.
-
-Dat werkt als volgt:
-
-1. Ga met de cursor (de muis) op een onderdeel staan
-2. Als er een vraagteken verschijnt bij de cursor is er uitleg beschikbaar
-3. Na een paar seconden verschijnt een pop-upvenster met uitleg
-
-Een voorbeeld:
-
-1. Klik op **Site**
-2. Ga met de cursor staan op **Omschrijving**
-3. Er verschijnt een vraagteken en daarna een venster met extra informatie
-
-<img src="sys/flexyadmin/assets/img/help/popup_2.gif" /> -->
