--- a/sys/flexyadmin/views/help/04__Tekst_plaatsen.html
+++ b/sys/flexyadmin/views/help/04__Tekst_plaatsen.html
@@ -1,26 +1,50 @@
+Om tekst te plaatsen:
+
+1. Klik op het potloodje
+2. Je komt dan in de pagina
+3. Op het tekstveld kun je je tekst plaatsen
+
+Je kunt op drie manieren tekst toevoegen:
+
+- Tekst direct intypen
+- Een tekst plakken uit een Word-document
+- Tekst uit een ander bestand of e-mail plakken (platte tekst)
+
+Nadat je tekst heb toegevoegd kun je de tekst nog bewerken.
+
+Tekst direct intypen
+--------------------
+
+1. Ga met de cursor in het tekstveld staan (in het voorbeeld hierboven is dat de plek waar "Welkom!" staat)
+2. Begin te typen
+
+Tekst plakken
+-------------
+
+1. Selecteer en kopieër de tekst 
+2. Klik boven het tekstveld op het icoontje **Plakken**, of druk op **CTRL-V**
+
 Tekst bewerken
---------------
+==============
 
 Hier lees je over de mogelijkheden om tekst te bewerken.
 
-<img src="sys/flexyadmin/assets/img/help/editor.gif" />
-
-##Nieuwe alinea of nieuwe regel
+Nieuwe alinea of nieuwe regel
+-----------------------------
 
 1. Druk op **RETURN** om een nieuwe alinea te beginnen.
 2. Druk tegelijk op **SHIFT** èn **RETURN** om op een nieuwe regel te beginnen.
 
-
-##Koppen maken
+Koppen maken
+------------
 
 Het invoegen van koppen structureert de tekst en maakt je site beter vindbaar in zoekmachines als Google.
-
-<img src="sys/flexyadmin/assets/img/help/editor_koppen.gif" />
 
 1. Selecteer de tekst waarvan je een kop wilt maken
 2. Kies een kop uit het keuzemenu bij **Opmaak** (De optie **Opmaak** zelf betekent dat de tekst normaal wordt weergegeven).
 
-##Uitleg van alle knoppen
+Uitleg van alle knoppen
+=======================
 
 Hieronder volgt uitleg van alle knoppen die je bovenaan het tekstveld ziet:
 
