--- a/sys/flexyadmin/views/help/02__Instellingen.html
+++ b/sys/flexyadmin/views/help/02__Instellingen.html
@@ -1,4 +1,4 @@
-Bovenaan vind je een knop 'Instellingen':
+In de header vind je de knop 'Instellingen':
 
 <img src="sys/flexyadmin/assets/img/help/instellingen.png" />
 
@@ -10,11 +10,11 @@ Hier vind je instellingen voor de hele site, onder andere:
 
 De bouwer van je site kan hier nog meer velden aan toevoegen als dat nodig is voor je site.
 
-Hieronder volgt per veld een uitleg.
+<!--Hieronder volgt per veld een uitleg.
 
 [tbl_site.str_title]
 [tbl_site.str_author]
 [tbl_site.url_url]
 [tbl_site.email_email]
 [tbl_site.stx_description]
-[tbl_site.stx_keywords]
+[tbl_site.stx_keywords] -->
