--- a/sys/flexyadmin/views/help/04__Tekst_plaatsen.html
+++ b/sys/flexyadmin/views/help/04__Tekst_plaatsen.html
@@ -1,49 +1,28 @@
-Om tekst te plaatsen:
+<img src="sys/flexyadmin/assets/img/help/tekst_plaatsen.png">
 
 1. Klik op het potloodje
 2. Je komt dan in de pagina
-3. Op het tekstveld kun je je tekst plaatsen
+3. Op het tekstveld kun je je tekst plaatsen:
 
-Je kunt op drie manieren tekst toevoegen:
+<img src="sys/flexyadmin/assets/img/help/tekst_aanpassen.png">
 
-- Tekst direct intypen
-- Een tekst plakken uit een Word-document
-- Tekst uit een ander bestand of e-mail plakken (platte tekst)
-
-Nadat je tekst heb toegevoegd kun je de tekst nog bewerken.
-
-Tekst direct intypen
---------------------
-
-1. Ga met de cursor in het tekstveld staan (in het voorbeeld hierboven is dat de plek waar "Welkom!" staat)
-2. Begin te typen
-
-Tekst plakken
--------------
-
-1. Selecteer en kopieër de tekst 
-2. Klik boven het tekstveld op het icoontje **Plakken**, of druk op **CTRL-V**
-
-Tekst bewerken
-==============
-
-Hier lees je over de mogelijkheden om tekst te bewerken.
-
-Nieuwe alinea of nieuwe regel
+<!-- Nieuwe alinea of nieuwe regel
 -----------------------------
 
 1. Druk op **RETURN** om een nieuwe alinea te beginnen.
-2. Druk tegelijk op **SHIFT** èn **RETURN** om op een nieuwe regel te beginnen.
+2. Druk tegelijk op **SHIFT** èn **RETURN** om op een nieuwe regel te beginnen. -->
 
-Koppen maken
+<!-- Koppen maken
 ------------
 
 Het invoegen van koppen structureert de tekst en maakt je site beter vindbaar in zoekmachines als Google.
 
 1. Selecteer de tekst waarvan je een kop wilt maken
-2. Kies een kop uit het keuzemenu bij **Opmaak** (De optie **Opmaak** zelf betekent dat de tekst normaal wordt weergegeven).
+2. Kies een kop uit het keuzemenu bij **Opmaak** (De optie **Opmaak** zelf betekent dat de tekst normaal wordt weergegeven). -->
 
-Uitleg van alle knoppen
+
+
+<!--Uitleg van alle knoppen
 =======================
 
 Hieronder volgt uitleg van alle knoppen die je bovenaan het tekstveld ziet:
@@ -63,4 +42,4 @@ icoon                                               | uitleg
 <span class="tinyMCEicon icon_linkremove"></span>   |**Link verwijderen**. Selecteer een link en verwijder hem door hierop te klikken.
 <span class="tinyMCEicon icon_image"></span>        |**Afbeelding invoegen/bewerken**. Klik hierop en plaats een foto. <a title="Foto's uploaden" href="admin/help/fotos">lees hier meer over het uploaden en plaatsen van foto's.</a>
 <span class="tinyMCEicon icon_embed"></span>        |**Sluit code in (embed)**. Klik hierop en voeg bijvoorbeeld een YouTube filmpje toe, een locatie uit Google Maps, een foto uit Flickr of uit een Picasa-album op internet. <a href="admin/help/youtube_googlemaps_etc">uitgebreide instructie</a>
-
+ -->
