--- a/sys/flexyadmin/views/help/06__Afbeeldingen.html
+++ b/sys/flexyadmin/views/help/06__Afbeeldingen.html
@@ -1,20 +1,12 @@
 Afbeeldingen uploaden
 =====================
 
-<img src="sys/flexyadmin/assets/img/help/foto_uploaden.gif" />
-
-1. Ga naar **Foto's**
+1. Ga naar **Afbeeldingen**
 2. Je ziet nu de lijst met afbeeldingen die al zijn geüpload.
-3. Klik linksboven op het icoontje met het plusje
-4. Er komt nu een pop-up.
+3. Klik op de gele plus-knop
+4. Er komt nu een pop-up
 
-<img src="sys/flexyadmin/assets/img/help/multi_upload.gif" />
-
-1. Klik op de knop **Voeg bestanden toe** en kies de afbeeldingen die je wilt uploaden, of sleep de afbeeldingen van je computer naar het pop-upvenster op de plek **Sleep bestanden hierheen**
-2. Herhaal stap 1 als je nog meer afbeeldingen wilt uploaden
-3. Klik op **Start Upload**
-4. Als je nog meer afbeeldingen wilt uploaden: begin weer bij stap 1
-5. Sluit het venster door op het kruisje rechtsboven te klikken
+NB Je kunt ook rechtstreeks afbeeldingen naar de lijst slepen.
 
 Afbeeldingen verwijderen
 ========================
@@ -28,85 +20,30 @@ Als je meerdere afbeeldingen tegelijk wilt verwijderen:
 2. Klik op het rode kruisje bovenin de lijst
 3. Er komt nu een bevestigingsvenster
 
-
 Afbeelding plaatsen
 ===================
 
-De manier waarop je foto’s op een pagina kunt plaatsen hangt van de keuzes af die je gemaakt hebt met je webbouwer. De verschillende manieren zijn:
-
-1 In een tekst
-2 Met een fotokiezer
-3 Met een fotolijst
+De manier waarop je afbeelding’s op een pagina kunt plaatsen hangt van de keuzes af die je gemaakt hebt met je webbouwer en kan op verschillende manieren:
 
 ##In een tekst
 
-<img src="sys/flexyadmin/assets/img/help/foto_knopje.gif" />
+<img src="sys/flexyadmin/assets/img/help/afbeelding_in_tekst.png" />
 
-1. Zet de cursor op de plek in de tekst waar je een foto wilt plaatsen en klik op het foto-icoontje
-2. Je krijgt nu een pop-upvenster te zien
+1. Zet de cursor op de plek in de tekst waar je een afbeelding wilt plaatsen en klik op het afbeelding-icoontje
+2. Je krijgt nu een pop-upvenster te zien waar je en afbeelding kunt kiezen.
 
-<img src="sys/flexyadmin/assets/img/help/foto_popup.gif" />
+##Met de afbeeldingkiezer
 
-1. Kies nu bij **Lijst** de foto die je wilt plaatsen
-2. Je ziet de foto nu in het voorbeeldkader verschijnen
-3. Je kunt **Beschrijving** en **Titel** aanpassen.
+Het kan zijn dat je een afbeelding(en) kunt plaatsen met een afbeeldingkiezer:
 
-###Verwijderen uit een tekst
+<img src="sys/flexyadmin/assets/img/help/afbeelding_kiezer.png" />
 
-1. Selecteer de foto in de tekst, het foto-icoontje wordt nu actief
-2. Druk op de **DELETE** knop van je toetsenbord om de foto te verwijderen
-3. Je kunt in plaats van **DELETE** ook op het foto-icoontje klikken om een andere foto te kiezen
+Klik op het gele plusje om (een) andere afbeelding te kiezen
 
-##Met de fotokiezer
+##Volgorde aanpassen
 
-Het kan zijn dat je een foto kunt plaatsen met een fotokiezer:
+Als je meerdere afbeelding hebt gekozen kun je de volgorde van de afbeelding's aanpassen:
 
-<img src="sys/flexyadmin/assets/img/help/foto_kiezer_thumbs.gif" />
-
-- In de bovenste balk staat de gekozen foto('s)
-- In de onderste balk de foto's waaruit je kunt kiezen
-- Afhankelijk van je site kun je één of meerdere foto's kiezen
-
-###Kiezen
-
-1. Klik in de onderste balk op de gewenste foto
-2. De foto komt nu in de bovenste balk terecht
-
-###Verwijderen
-
-1. Klik in de bovenste balk op de foto die je wilt verwijderen
-2. De foto verdwijnt uit de bovenste balk en komt in de onderste balk
-
-###Volgorde aanpassen
-
-Als je meerdere foto's kunt kiezen kun je de volgorde van de foto's aanpassen:
-
-1. Klik en houd de muisknop ingedrukt op de foto die je wilt verplaatsen
-2. Sleep de foto naar de juiste plek
+1. Klik en houd de muisknop ingedrukt op de afbeelding die je wilt verplaatsen
+2. Sleep de afbeelding naar de juiste plek
 3. Laat de muisknop los
-
-##Met de fotolijst
-
-<img src="sys/flexyadmin/assets/img/help/foto_kiezer_lijst.gif" />
-
-- Linksbobven zie je de gekozen foto('s)
-- Rechts een knop waarmee de lijst uitvouwt (zoals hierboven al het geval is)
-
-###Kiezen
-
-1. Klik op de pijltjes rechts om de lijst uit te vouwen
-2. Vink de foto('s) aan die je wilt plaatsen
-
-###Verwijderen
-
-1. Klik op de pijltjes rechts om de lijst uit te vouwen
-2. Vink de foto('s) uit die je wilt verwijderen
-
-###Volgorde aanpassen
-
-Als je meerdere foto's kunt kiezen kun je de volgorde van de foto's aanpassen:
-
-1. Klik en houd de muisknop ingedrukt op de foto die je wilt verplaatsen
-2. Sleep de foto naar de juiste plek
-3. Laat de muisknop los
-
