--- a/sys/flexyadmin/views/help/07__Downloads.html
+++ b/sys/flexyadmin/views/help/07__Downloads.html
@@ -6,7 +6,7 @@ Wil je een ander soort bestanden aanbieden en is dit via **Downloads** niet moge
 Een bestand uploaden
 --------------------
 
-Het werkt hier net zoals bij het <a href="admin/help/-_uploaden">uploaden van foto's</a>:
+Het werkt hier net zoals bij het uploaden van foto's:
 
 1. Klik linksboven op het icoontje met het plusje, er komt nu een pop-upvenstertje
 2. Kies het bestand op je computer
@@ -15,7 +15,7 @@ Het werkt hier net zoals bij het <a href="admin/help/-_uploaden">uploaden van fo
 Download-link plaatsen op een pagina
 -------------------------------
 
-Dit werkt net zoals het maken van een <a href="admin/help/links">link</a>:
+Dit werkt net zoals het maken van een link:
 
 1. Selecteer de tekst of de afbeelding die de download-link moet worden
 2. Klik op het link-icoontje
