--- a/sys/flexyadmin/views/help/12__FAQ.html
+++ b/sys/flexyadmin/views/help/12__FAQ.html
@@ -1,4 +1,4 @@
-###Wat is een browser?
+#Wat is een browser?
 
 Een browser is het programma van je computer (of tablet, of smartphone) waarmee je internetpagina's bekijkt. De meest bekende browsers:
 
@@ -7,20 +7,20 @@ Een browser is het programma van je computer (of tablet, of smartphone) waarmee 
 - Firefox
 - Safari
 
-###Welke browser heb ik?
+#Welke browser heb ik?
 
 - Als je een Windows computer gebruikt, dan gebruik je waarschijnlijk Internet Explorer.
 - Als je een Apple computer gebruikt, dan gebruik je waarschijnlijk Safari.
 
-###Welke browser is goed?
+#Welke browser is goed?
 
 Als je privacy en snelheid belangrijk vindt kies dan voor <a href="http://www.mozilla.org/nl/firefox/fx/" target="_blank">Firefox</a>. Als je privacy minder belangrijk vindt dan snelheid, dan is <a href="www.google.com/chrome" target="_blank">Google Chrome</a> ook een goed optie.
 
-###Wat is een zoekmachine?
+#Wat is een zoekmachine?
 
 Een zoekmachine is een website waarmee je op internet kunt zoeken naar andere websites. Google is de meest bekende. Ander bekende zoekmachines zijn Bing en Yahoo!.
 
-###Mijn site is niet vindbaar op Google!
+#Mijn site is niet vindbaar op Google!
 
 Oorzaak daarvan is bijvoorbeeld:
 
@@ -28,20 +28,12 @@ Oorzaak daarvan is bijvoorbeeld:
 - Je site is nog maar erg kort online. Het duurt vaak enkele weken tot maanden voordat Google je site vindt. En dan vaak niet op de eerste pagina.
 - Je site is niet bekend genoeg.
 
-Tips om je site op Google beter vindbaar te maken lees je <a href="admin/help/tips_voor_een_goede_site">hier</a>.
 
-
-###De tekst op de site ziet er niet goed uit / het lettertype klopt niet!
-
-Waarschijnlijk heb je de tekst op deze pagina niet op de juiste manier vanuit Word geplakt.
-Lees bij <a href="admin/help/tekst_plaatsen">Tekst plaatsen</a> hoe dit moet.
-
-
-###Als ik op RETURN druk komt er een lege regel, dat wil ik niet
+#Als ik op RETURN druk komt er een lege regel, dat wil ik niet
 
 Als je op **RETURN** drukt begint er altijd een nieuwe alinea. Als je alleen op een volgende regel verder wilt, druk dan tegelijk op **SHIFT** en **RETURN**.
 
-###Wat betekent: "Het bestandstype welke u probeert te uploaden is niet toegestaan."
+#Wat betekent: "Het bestandstype welke u probeert te uploaden is niet toegestaan."
 
 Je probeert een foto of ander bestand te uploaden dat niet is toegestaan
 
