--- a/sys/flexyadmin/views/help/03__Pagina's.html
+++ b/sys/flexyadmin/views/help/03__Pagina's.html
@@ -1,26 +1,26 @@
-Klik op 'Pagina's' in het linker menu:
+In het linker menu vind je de knop 'Pagina's':
 
 <img src="sys/flexyadmin/assets/img/help/paginas.png" />
 
-Hier zie je de structuur van de website.
-De verschillende pagina’s staan onder elkaar met de titel en de eerste regels van de tekst.
+Als je hierop klikt zie je de menu structuur van de website.
+De verschillende pagina’s staan onder elkaar met o.a. de titel en de eerste regels van de tekst:
 
 <img src="sys/flexyadmin/assets/img/help/paginas_grid.png" />
 
-Pagina toevoegen
+Pagina toevoegen:
 ================
 
 1. Klik op het icoontje met het plusje linksboven
 
 <img src="sys/flexyadmin/assets/img/help/paginas_maken.png" />
 
-2. Je krijgt nu een invulformulier. Hieronder volgt een uitleg van alle velden.
+2. Je krijgt nu een invulformulier.
 3. Als je de velden hebt ingevuld klik je op **Invoeren** om de pagina toe te voegen.
 
 <img src="sys/flexyadmin/assets/img/help/pagina_formulier.png" />
 
 
-Velden in het formulier
+<!-- Velden in het formulier
 =======================
 
 [tbl_menu.self_parent]
@@ -32,29 +32,24 @@ Extra velden
 
 [tbl_menu.str_module]
 [tbl_menu.stx_description]
-[tbl_menu.str_keywords]
+[tbl_menu.str_keywords] -->
 
-
-Pagina verwijderen
+Pagina verwijderen:
 ==================
 
 1. Klik op het rode kruisje van de pagina die je wilt verwijderen
+
+<img src="sys/flexyadmin/assets/img/help/pagina_verwijderen.png">
+
 2. Een pop-upvenster vraagt of je deze pagina echt wilt verwijderen
 3. Als je op **Ja** klikt wordt de pagina verwijderd
 
-Meerdere pagina's tegelijk verwijderen
-======================================
-
-1. Vink het lege vierkantje aan van de pagina die je wilt verwijderen, je selecteert daarmee die pagina
-2. Herhaal stap 1 voor elke pagina die je wilt verwijderen
-3. Als je alle pagina's hebt aangevinkt, klik je op het rode kruisje helemaal bovenin
-
-Tip: Door op het lege vierkantje bovenin te klikken wordt de selectie omgekeerd. Zo kun je eenvoudig alles selecteren, of bijna alles. Probeer het maar uit.
-
-
-Volgorde van pagina's aanpassen
+Volgorde van pagina's aanpassen:
 ===============================
 
 1. Klik op het dubbele groene pijltje
+
+<img src="sys/flexyadmin/assets/img/help/pagina_verplaatsen.png">
+
 2. Houd de muisknop ingedrukt en sleep nu de pagina naar boven/onder
 3. Laat de muisknop los als de pagina op de gewenste plek staat
