--- a/sys/flexyadmin/views/help/11__Tips_voor_een_goede_site.html
+++ b/sys/flexyadmin/views/help/11__Tips_voor_een_goede_site.html
@@ -4,15 +4,15 @@ Een website is anders dan een boek of tijdschrift. Het is bekend dat bezoekers v
 - Structureer de tekst door middel van koppen. Dan is die in één oogopslag te 'lezen'
 - Maak gebruik van beeld. Foto’s, filmpjes en ander beeldmateriaal maken de site aantrekkelijk en toegankelijk
 
-##Tips voor Google en SEO (Search Engine Optimization)
+#Tips voor Google en SEO (Search Engine Optimization)
 
 Hoe maak je je site beter vindbaar voor bezoekers? De volgende tips zorgen ervoor dat zoekmachines als Google de site inhoudelijk en technisch kunnen doorzoeken:
 
-- Vul bij **Site** de velden **Omschrijving** en **Zoektermen** in
+- Vul bij **Instellingen** de velden **Omschrijving** en **Zoektermen** in
 - Gebruik in de koppen en in de eerste alinea van een pagina veelzeggende woorden die de pagina kenmerken. Deze woorden functioneren als zoektermen.
-- Maak de koppen niet vet of cursief maar maak er echte koppen van, zie bij <a href="admin/help/-_bewerken">Tekst bewerken</a>
+- Maak de koppen niet vet of cursief maar maak er echte koppen van
 - Geef afbeeldingen en foto’s begrijpelijke namen of in ieder geval een beschrijving
 
-Om hoger in zoekresultaten terecht te komen:
+#Om hoger in zoekresultaten terecht te komen:
 
 - Zorg ervoor dat veel andere sites naar jouw site linken. Hoe belangrijker, groter en bekender die sites zijn, hoe beter. Verwacht echter geen wonderen van zoekmachines; internet is net de echte wereld
