field_info as flate form info
Former-commit-id: 7779bfbd1dee5d37b883a9700d188761c42b87c9

--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -136,7 +136,7 @@
    }
    
    // Table primary header
-   th.grid-header-type-primary {
+   th.grid-header-type-hidden.text-primary {
      width:2rem;
      white-space:nowrap;
    }
