--- a/sys/flexyadmin/assets/scss/_defaults.scss
+++ b/sys/flexyadmin/assets/scss/_defaults.scss
@@ -74,7 +74,7 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
       }
     }
     >.card-block {
-      overflow:hidden;
+//      overflow:hidden;
       padding:.25rem .5rem;
       .form-group {margin-bottom:.5rem;}
     }
