FA meer assets velden mogelijk (en editable)
Former-commit-id: 2b3647affd282dbb96a8a702945d5faf8c9b7095
Former-commit-id: a64a5675f01aaf13d0a504e9d9bf42835f7dd839 [formerly 6bc8424fc3c2f7cf1e7a45c273f34a0d261cf546]
Former-commit-id: d69158002844e7f163430982d408d0b35750aed8

--- a/sys/flexyadmin/assets/scss/_grid.scss
+++ b/sys/flexyadmin/assets/scss/_grid.scss
@@ -228,8 +228,9 @@
         border-color:$brand-primary;
         box-shadow:0 0 .5rem $gray;
       }
-      
+
       td {
+        display:none;
         border:none;
         padding:0px;
         background-color:transparent;
@@ -237,7 +238,7 @@
       }
       
       td.action {
-        display:none;
+        // display:none;
         position:absolute;
         text-align:center;
         background-color:rgba(255,255,255,.8);
@@ -283,7 +284,7 @@
       td[name='size'],
       td[name='width'],
       td[name='height'] {
-        display:none
+        // display:none
       }
       
       
